--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                         {mode === 'planning' ? (
                             <PlanningView {...state} onCultInfoChange={handleCultInfoChange} showTechnical={showTechnical} onAddItem={addItem} onUpdateItem={updateItem} onDeleteItem={deleteItem} onMoveItem={moveItem} onSavePreset={handleSavePreset} onLoadPreset={handleLoadPreset} onDeletePreset={handleDeletePreset} onDownloadTemplate={handleDownloadExcelTemplate} onImportClick={() => fileInputRef.current.click()} onExportPDF={handleExportPDF} presets={presets} selectedPresetId={selectedPresetId} setSelectedPresetId={setSelectedPresetId} />
                         ) : (
-                            <PresentationView state={state} onStateUpdate={handleStateUpdate} isReadOnly={false} />
+                            <PresentationView state={state} onStateUpdate={handleStateUpdate} isReadOnly={false} onSwitchToPlanning={() => setMode('planning')} />
                         )}
                         <input type="file" accept=".xlsx, .xls" ref={fileInputRef} className="hidden-file-input" onChange={handleImportExcel} />
                     </div>
@@ -533,7 +533,7 @@
 
         const TechDetailsDisplay = ({ technical, colorClass = "text-blue-300" }) => { const techKeyTranslations = { projection: 'Projeção', sound: 'Som', microphone: 'Microfone', lighting: 'Iluminação', camera: 'Câmera' }; const techDetails = technical ? Object.entries(technical).filter(([key, value]) => value && value !== '-') : []; if (techDetails.length === 0) return null; return ( <div> <h4 className={`font-semibold ${colorClass} mb-1 flex items-center gap-2`}><icons.Settings size={16} /> Detalhes Técnicos</h4> <div className="flex flex-col space-y-1 text-sm text-gray-300"> {techDetails.map(([key, value]) => ( <div key={key} className="flex items-center gap-2"> {key === 'projection' && <icons.Monitor size={14} />} {key === 'sound' && <icons.Volume2 size={14} />} {key === 'microphone' && <icons.Mic size={14} />} {key === 'lighting' && <icons.Lightbulb size={14} />} {key === 'camera' && <icons.Camera size={14} />} <span>{techKeyTranslations[key] || key}:</span> <span className="font-semibold text-white">{value}</span> </div> ))} </div> </div> ); };
 
-        const PresentationView = ({ state, onStateUpdate, isReadOnly }) => {
+        const PresentationView = ({ state, onStateUpdate, isReadOnly, onSwitchToPlanning }) => {
             const [displayTime, setDisplayTime] = useState(0);
             const { items, cultInfo, liveState } = state;
             const { currentItemIndex, isRunning, itemStartTime, accumulatedTime, actualStartTime } = liveState;
@@ -552,7 +552,7 @@
 
             const handleToggleTimer = () => { onStateUpdate(prevState => { const { liveState, items } = prevState; const now = Date.now(); if (liveState.isRunning) { const elapsed = liveState.itemStartTime ? (now - liveState.itemStartTime) / 1000 : 0; return { ...prevState, liveState: { ...liveState, isRunning: false, accumulatedTime: liveState.accumulatedTime + elapsed, itemStartTime: null } }; } else { const newItems = items.map((item, index) => index === liveState.currentItemIndex ? { ...item, actualStartTime: item.actualStartTime || new Date().toISOString() } : item); return { ...prevState, items: newItems, liveState: { ...liveState, isRunning: true, itemStartTime: now, actualStartTime: liveState.actualStartTime || new Date().toISOString() } }; } }); };
             const handleResetTimer = () => { onStateUpdate(prevState => ({ ...prevState, liveState: { ...prevState.liveState, isRunning: false, itemStartTime: null, accumulatedTime: 0 } })); };
-            const handleNext = () => { if (!items || currentItemIndex >= items.length - 1) return; onStateUpdate(prevState => { const { items, liveState } = prevState; const now = Date.now(); const elapsed = liveState.isRunning && liveState.itemStartTime ? (now - liveState.itemStartTime) / 1000 : 0; const finalDuration = liveState.accumulatedTime + elapsed; const newItems = items.map((item, index) => index === liveState.currentItemIndex ? { ...item, completed: true, actualDuration: finalDuration, actualEndTime: new Date().toISOString() } : item ); return { ...prevState, items: newItems, liveState: { ...liveState, currentItemIndex: liveState.currentItemIndex + 1, isRunning: true, itemStartTime: now, accumulatedTime: 0 } }; }); };
+            const handleNext = () => { if (!items || currentItemIndex >= items.length - 1) return; onStateUpdate(prevState => { const { items, liveState } = prevState; const now = new Date().toISOString(); const elapsed = liveState.isRunning && liveState.itemStartTime ? (Date.now() - liveState.itemStartTime) / 1000 : 0; const finalDuration = liveState.accumulatedTime + elapsed; const newItems = items.map((item, index) => { if (index === liveState.currentItemIndex) { return { ...item, completed: true, actualDuration: finalDuration, actualEndTime: now }; } if (index === liveState.currentItemIndex + 1) { return { ...item, actualStartTime: now }; } return item; }); return { ...prevState, items: newItems, liveState: { ...liveState, currentItemIndex: liveState.currentItemIndex + 1, isRunning: true, itemStartTime: Date.now(), accumulatedTime: 0 } }; }); };
             const handlePrevious = () => { if (currentItemIndex <= 0) return; onStateUpdate(prevState => { const newItems = prevState.items.map((item, index) => { if (index === prevState.liveState.currentItemIndex - 1) { return { ...item, completed: false, actualDuration: null, actualStartTime: null, actualEndTime: null }; } return item; }); return { ...prevState, items: newItems, liveState: { ...prevState.liveState, currentItemIndex: prevState.liveState.currentItemIndex - 1, isRunning: false, itemStartTime: null, accumulatedTime: 0 } }; }); };
             const handleResetWorship = () => { if (confirm("Tem certeza que deseja reiniciar o culto? Todo o progresso será perdido.")) { onStateUpdate(prevState => { const resetItems = prevState.items.map(item => ({ ...item, completed: false, actualDuration: null, actualStartTime: null, actualEndTime: null })); return { ...prevState, items: resetItems, liveState: { currentItemIndex: 0, isRunning: false, itemStartTime: null, accumulatedTime: 0, actualStartTime: null, announcement: null } }; }); } };
             const handleSendAnnouncement = () => { if (!announcementText.trim()) return; onStateUpdate(prevState => ({ ...prevState, liveState: { ...prevState.liveState, announcement: { message: announcementText, duration: announcementDuration, timestamp: new Date().toISOString() } } })); setAnnouncementText(""); };
@@ -569,7 +569,23 @@
                 });
             };
 
-            if (!currentItem) { return <div className="text-center p-10 bg-white rounded-lg shadow-md"><h2 className="text-2xl font-bold">Culto Finalizado.</h2><p>Você pode reiniciar o culto ou voltar para a tela de planejamento.</p></div> }
+            if (!currentItem) { 
+                return (
+                    <div className="text-center p-10 bg-white rounded-lg shadow-md">
+                        <h2 className="text-2xl font-bold">Culto Finalizado.</h2>
+                        {!isReadOnly && (
+                            <div className="mt-6 flex justify-center gap-4">
+                                <button onClick={handleResetWorship} className="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg flex items-center gap-2">
+                                    <icons.RotateCcw size={18}/> Reiniciar Culto
+                                </button>
+                                <button onClick={onSwitchToPlanning} className="bg-gray-600 hover:bg-gray-700 text-white px-4 py-2 rounded-lg flex items-center gap-2">
+                                    <icons.Settings size={18}/> Voltar ao Planejamento
+                                </button>
+                            </div>
+                        )}
+                    </div>
+                )
+            }
             
             const mainContentColor = isReadOnly ? 'text-white' : 'text-gray-800';
             const mainBgColor = isReadOnly ? 'bg-gray-900' : 'bg-gray-800';
@@ -585,7 +601,7 @@
                             </div>
                             <div className="text-right">
                                 <div className="text-sm lg:text-base text-gray-400">Horário Previsto</div>
-                                <div className="text-2xl lg:text-4xl font-mono">{currentItem.startTime}</div>
+                                <div className="text-2xl lg:text-4xl font-mono text-white">{currentItem.startTime}</div>
                             </div>
                         </div>
                         <div className="my-6 text-center">
@@ -593,6 +609,7 @@
                             <div className="text-gray-400 lg:text-lg">Planejado: {formatTime(plannedDurationInSeconds)}</div>
                         </div>
                         <div className="w-full bg-gray-700 rounded-full h-4 mb-6"><div className={`h-4 rounded-full transition-all duration-500 ${isOvertime ? 'bg-red-500' : 'bg-green-500'}`} style={{ width: `${progressPercentage}%` }}/></div>
+                        {(currentItem.description || (currentItem.technical && Object.values(currentItem.technical).some(v => v && v !== '-'))) && ( <div className="grid grid-cols-1 md:grid-cols-2 gap-4 mb-6 bg-black/20 p-4 rounded-lg"> {currentItem.description && ( <div> <h4 className="font-semibold text-blue-300 mb-1 flex items-center gap-2"><icons.Info size={16} /> Descrição</h4> <p className="text-sm text-gray-300 whitespace-pre-wrap">{currentItem.description}</p> </div> )} <TechDetailsDisplay technical={currentItem.technical} /> </div> )}
                         {!isReadOnly && ( <div className="flex justify-center flex-wrap gap-4"> <button onClick={handlePrevious} className="bg-gray-600 hover:bg-gray-500 px-4 py-2 rounded-lg disabled:opacity-50" disabled={currentItemIndex === 0}>Anterior</button> <button onClick={handleToggleTimer} className={`px-6 py-2 rounded-lg flex items-center gap-2 text-lg ${isRunning ? 'bg-yellow-500 hover:bg-yellow-600' : 'bg-green-500 hover:bg-green-600'}`}> {isRunning ? <icons.Pause size={20}/> : <icons.Play size={20}/>} {isRunning ? 'Pausar' : 'Iniciar'} </button> <button onClick={handleResetTimer} className="bg-gray-600 hover:bg-gray-500 px-4 py-2 rounded-lg flex items-center gap-2"><icons.RotateCcw size={18}/> Resetar Timer</button> {currentItemIndex < items.length - 1 ? (<button onClick={handleNext} className="bg-blue-600 hover:bg-blue-500 px-4 py-2 rounded-lg">Próximo</button>) : (<button onClick={handleEndWorship} className="bg-red-600 hover:bg-red-500 px-4 py-2 rounded-lg flex items-center gap-2"> <icons.CheckCircle size={18}/> Encerrar Culto</button>)} <button onClick={handleResetWorship} className="bg-red-800 hover:bg-red-700 px-4 py-2 rounded-lg flex items-center gap-2"><icons.Power size={18}/> Reiniciar Culto</button> </div> )}
                     </div>
                     {nextItem && (
@@ -627,7 +644,7 @@
                             <h3 className="font-semibold text-xl">Linha do Tempo</h3>
                             <div className="flex gap-4 items-center">
                                 <div className={`text-sm font-semibold px-3 py-1 rounded-full ${balance >= 0 ? 'bg-green-200 text-green-800' : 'bg-red-200 text-red-800'}`}> Balanço: {balance >= 0 ? '+' : ''}{Math.round(balance)} min </div>
-                                <div className="text-sm font-semibold">Término: <span className="font-mono bg-gray-700 px-2 py-1 rounded">{estimatedEndTime}</span></div>
+                                <div className="text-sm font-semibold text-white">Término: <span className="font-mono bg-gray-700 px-2 py-1 rounded">{estimatedEndTime}</span></div>
                             </div>
                         </div>
                         <div className="flex overflow-x-auto gap-3 pb-2"> {items && items.map((item, index) => { const isCurrent = index === currentItemIndex; const isNext = index === currentItemIndex + 1; const borderColor = isCurrent ? 'border-blue-500' : isNext ? 'border-yellow-400' : 'border-gray-600'; const bgColor = isCurrent ? 'bg-gray-700' : 'bg-gray-700/50'; return ( <div key={item.id} className={`flex-shrink-0 w-48 p-3 rounded-lg border-2 transition-all ${borderColor} ${bgColor}`}> <div className="flex justify-between items-start"> <span className="text-xs font-mono text-gray-300">{item.startTime}</span> {item.completed && <icons.CheckCircle size={16} className="text-green-400"/>} </div> <h4 className={`font-semibold text-sm mb-1 ${item.completed ? 'text-gray-400 line-through' : 'text-white'}`}>{item.title}</h4> <div className="text-xs text-gray-400 flex items-center gap-1"><icons.Clock size={12} /> {item.duration} min</div> </div> ); })} </div>
